--- a/issues.html
+++ b/issues.html
@@ -146,10 +146,14 @@
             <div class="modal-header">
                 <h2 class="modal-title">Create a New Issue Report</h2>
             </div>
-            <form id="issue-form">
+           <form id="issue-form">
                 <div>
                     <label for="issue-title">Title</label>
                     <input type="text" id="issue-title" name="issue-title" required placeholder="A brief, descriptive title">
+                </div>
+                <div>
+                    <label for="user-email">Your Email Address</label>
+                    <input type="email" id="user-email" name="user-email" required placeholder="So the admin can reply to you">
                 </div>
                  <div>
                     <label for="issue-label">Label</label>
